--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,6 +136,10 @@
   margin: 0;
 }
 
+.capturing .name-input::placeholder {
+  color: transparent;
+}
+
 
 .shadow-card {
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
